# android-native-gles

./: gradlew.bat  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/nativegl/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: shader.vert
app/src/main/cpp/: CMakeLists.txt  EGLHelper.cpp  EGLHelper.h  Engine.cpp  Engine.h  Log.cpp  Log.h  glutils.c  glutils.h  log.c  log.h  main.c  main.cpp
app/src/main/java/com/example/nativegl/: MainActivity.kt
app/src/test/java/com/example/nativegl/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
